add more actions